docs/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ogc-proxy-svc
  namespace: ogc-proxy
spec:
  selector:
    app: ogc-proxy
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
