docs/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ogc-proxy-ingress
  namespace: ogc-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ogc.your-city.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ogc-proxy-svc
                port:
                  number: 80
